refatorei o código deixando mais voltado a programação funcional, adicionando novas moedas também.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         <select name="" id="">
             <option value="">Selecione uma moeda para converter em Real Brasileiro:</option>
             <option value="USD-BRL,BRL-USD">Dólar Americano</option>
-            
+            <option value="EUR-BRL,BRL-EUR">Euro</option>
+            <option value="JPY-BRL,BRL-JPY">Iene Japonês</option>
+            <option value="CNY-BRL,BRL-CNY">Yuan Chinês</option>
+            <option value="RUB-BRL,BRL-RUB">Rublo Russo</option>
+            <option value="ARS-BRL,BRL-ARS">Peso Argentino</option>
         </select>
         <input type="text" placeholder="digite um valor">
     </div>
