pequena alteração em um option

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="conteudo">
         <select name="" id="">
-            <option value="">Selecione uma moeda para converter em Real Brasileiro:</option>
+            <option value="" disabled selected>Selecione uma moeda para converter em Real Brasileiro:</option>
             <option value="USD-BRL,BRL-USD">Dólar Americano</option>
             <option value="EUR-BRL,BRL-EUR">Euro</option>
             <option value="JPY-BRL,BRL-JPY">Iene Japonês</option>
